[package]
name = "space-invaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
sdl2 = "0.34.5"

[features]

# If true, check for boundaries, etc...
debug_checks = []