[package]
name = "space-invaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "emulator", "wasm-space-invaders" ]

[dependencies]
once_cell = "1.8.0"
lazy_static = "1.4.0"
sdl2 = "0.34.5"
emulator = { path = "emulator" }

